src/objects/EBC_Email_Exclusion_Relation__c.object
<CustomObject>
    <description>This object represents all the Id Cards and GDP Accounts that should be exclude from eBroadcast Mailing</description>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Billing Account to be exclude</description>
        <inlineHelpText>Billing Account to be exclude</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>EBC Email Exclusion Relations</relationshipLabel>
        <relationshipName>EBC_Email_Exclusion_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBC_Email_Exclusion__c</fullName>
        <description>The Email Exclusion records that has been used to create the relation</description>
        <inlineHelpText>The Email Exclusion records that has been used to create the relation</inlineHelpText>
        <label>EBC Email Exclusion</label>
        <referenceTo>EBC_Email_Exclusion__c</referenceTo>
        <relationshipLabel>EBC Email Exclusion Relations</relationshipLabel>
        <relationshipName>EBC_Email_Exclusion_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This Id will be used for upserting records on a unique manner</description>
        <externalId>true</externalId>
        <inlineHelpText>This Id will be used for upserting records on a unique manner</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GDP_Products_Account_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GDP Account that should be exclude from an eBroadcast Mailing</description>
        <inlineHelpText>GDP Account that should be exclude from an eBroadcast Mailing</inlineHelpText>
        <label>GDP Products - Account View</label>
        <referenceTo>GDP_Products_Account_View__c</referenceTo>
        <relationshipLabel>EBC Email Exclusion Relations</relationshipLabel>
        <relationshipName>EBC_Email_Exclusion_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id Card that should be exclude from an eBroadcast Mailing</description>
        <inlineHelpText>Id Card that should be exclude from an eBroadcast Mailing</inlineHelpText>
        <label>ID Card</label>
        <referenceTo>ID_Card__c</referenceTo>
        <relationshipLabel>EBC Email Exclusion Relations</relationshipLabel>
        <relationshipName>EBC_Email_Exclusion_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Email_Changed__c</fullName>
        <description>Is GDP Account or ID Card email address changed since the exclusion</description>
        <formula>EBC_Email_Exclusion__r.Email__c != IF(!ISBLANK(GDP_Products_Account_View__c),  GDP_Products_Account_View__r.Email_Address__c,  ID_Card__r.Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is GDP Account or ID Card email address changed since the exclusion</inlineHelpText>
        <label>Is Email Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Global</label>
        <type>Checkbox</type>
    </fields>
    <label>EBC Email Exclusion Relation</label>
    <listViews>
        <fullName>Exclusion_Emails</fullName>
        <columns>NAME</columns>
        <columns>ID_Card__c</columns>
        <columns>GDP_Products_Account_View__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Is_Global__c</columns>
        <columns>EBC_Email_Exclusion__c</columns>
        <columns>External_Id__c</columns>
        <columns>Is_Email_Changed__c</columns>
        <filterScope>Everything</filterScope>
        <label>Exclusion Emails</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>EBC Email Exclusion Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBC Email Exclusion Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>